Fix Minor Again, huh!

--- a/admin/data-anggota.html
+++ b/admin/data-anggota.html
@@ -6,7 +6,7 @@
     <title>Perpustakaan Kartini - Admin</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
-  <body background="/assets/icon/page-background.png">
+  <body background="./assets/icon/page-background.png">
     <!-- START NAVBAR -->
     <div class="navbar">
       <div class="wrapper">
@@ -20,7 +20,7 @@
           <div class="dropdown">
             <button class="mainmenubtn" onclick="toggleDropdown()">
               <img
-                src="/assets/icon/user.png"
+                src="./assets/icon/user.png"
                 style="width: 12px; height: 12px; display: flex"
                 alt="Petugas Icon"
                 class="icon-petugas"
@@ -31,13 +31,13 @@
               <h4>Profil</h4>
               <a href="/"
                 ><img
-                  src="/assets/icon/user.png"
+                  src="./assets/icon/user.png"
                   style="width: 12px; height: 12px"
                 />Profile</a
               >
               <a href="/"
                 ><img
-                  src="/assets/icon/power-off.png"
+                  src="./assets/icon/power-off.png"
                   style="width: 12px; height: 12px"
                 />Logout</a
               >
@@ -54,7 +54,7 @@
       <div class="sidebar">
         <div class="menu-admin-person">
           <img
-            src="/assets/pictures/profile/FOTO_FORMAL-noBG.png"
+            src="./assets/pictures/profile/FOTO_FORMAL-noBG.png"
             style="
               width: 90px;
               height: 120px;
@@ -71,13 +71,13 @@
               href="index.html"
               class="menu-admin-active dropdown-toggle no-caret"
             >
-              <img src="/assets/icon/dashboard.png" alt="Dashboard Icon" />
+              <img src="./assets/icon/dashboard.png" alt="Dashboard Icon" />
               Dashboard
             </a>
           </li>
           <li class="menu-dropdown">
             <a href="#" class="menu-admin-active dropdown-toggle">
-              <img src="/assets/icon/dashboard.png" alt="Dashboard Icon" />
+              <img src="./assets/icon/dashboard.png" alt="Dashboard Icon" />
               Data Anggota
               <span class="caret"></span>
               <ul class="submenu">
@@ -88,7 +88,7 @@
           </li>
           <li class="menu-dropdown">
             <a href="#" class="menu-admin-active dropdown-toggle">
-              <img src="/assets/icon/dashboard.png" alt="Dashboard Icon" />
+              <img src="./assets/icon/dashboard.png" alt="Dashboard Icon" />
               Data Buku
               <span class="caret"></span>
               <ul class="submenu">
@@ -99,7 +99,7 @@
           </li>
           <li class="menu-dropdown">
             <a href="#" class="menu-admin-active dropdown-toggle">
-              <img src="/assets/icon/dashboard.png" alt="Dashboard Icon" />
+              <img src="./assets/icon/dashboard.png" alt="Dashboard Icon" />
               Data Admin
               <span class="caret"></span>
               <ul class="submenu">
@@ -110,7 +110,7 @@
           </li>
           <li class="menu-dropdown">
             <a href="#" class="menu-admin-active dropdown-toggle">
-              <img src="/assets/icon/dashboard.png" alt="Dashboard Icon" />
+              <img src="./assets/icon/dashboard.png" alt="Dashboard Icon" />
               Laporan
               <span class="caret"></span>
               <ul class="submenu">
@@ -121,7 +121,7 @@
           </li>
           <li class="menu-dropdown">
             <a href="about" class="menu-admin-active dropdown-toggle no-caret">
-              <img src="/assets/icon/dashboard.png" alt="Dashboard Icon" />
+              <img src="./assets/icon/dashboard.png" alt="Dashboard Icon" />
               Tentang Perpustakaan
             </a>
           </li>
@@ -136,7 +136,7 @@
               <div class="input-search-bt">
                 <input type="text" style="width: 140px;" placeholder="Cari Anggota" />
                 <button type="submit" style="margin-left: 5px;">
-                  <img src="/assets/icon/search.png" />
+                  <img src="./assets/icon/search.png" />
                 </button>
               </div>
             </div>
