--- a/admin/index.html
+++ b/admin/index.html
@@ -20,7 +20,7 @@
           <div class="dropdown">
             <button class="mainmenubtn" onclick="toggleDropdown()">
               <img
-                src="/assets/icon/user.png"
+                src="./assets/icon/user.png"
                 style="width: 12px; height: 12px; display: flex"
                 alt="Petugas Icon"
                 class="icon-petugas"
@@ -31,13 +31,13 @@
               <h4>Profil</h4>
               <a href="/"
                 ><img
-                  src="/assets/icon/user.png"
+                  src="./assets/icon/user.png"
                   style="width: 12px; height: 12px"
                 />Profile</a
               >
               <a href="/"
                 ><img
-                  src="/assets/icon/power-off.png"
+                  src="./assets/icon/power-off.png"
                   style="width: 12px; height: 12px"
                 />Logout</a
               >
@@ -52,7 +52,7 @@
       <div class="sidebar">
         <div class="menu-admin-person">
           <img
-            src="/assets/pictures/profile/FOTO_FORMAL-noBG.png"
+            src="./assets/pictures/profile/FOTO_FORMAL-noBG.png"
             style="
               width: 90px;
               height: 120px;
@@ -67,13 +67,13 @@
             <a
               href="index.html"
               class="menu-admin-active dropdown-toggle no-caret">
-              <img src="/assets/icon/dashboard.png" alt="Dashboard Icon" />
+              <img src="./assets/icon/dashboard.png" alt="Dashboard Icon" />
               Dashboard
             </a>
           </li>
           <li class="menu-dropdown">
             <a href="#" class="menu-admin-active dropdown-toggle">
-              <img src="/assets/icon/dashboard.png" alt="Dashboard Icon" />
+              <img src="./assets/icon/dashboard.png" alt="Dashboard Icon" />
               Data Anggota
               <span class="caret"></span>
               <ul class="submenu">
@@ -84,7 +84,7 @@
           </li>
           <li class="menu-dropdown">
             <a href="#" class="menu-admin-active dropdown-toggle">
-              <img src="/assets/icon/dashboard.png" alt="Dashboard Icon" />
+              <img src="./assets/icon/dashboard.png" alt="Dashboard Icon" />
               Data Buku
               <span class="caret"></span>
               <ul class="submenu">
@@ -95,7 +95,7 @@
           </li>
           <li class="menu-dropdown">
             <a href="#" class="menu-admin-active dropdown-toggle">
-              <img src="/assets/icon/dashboard.png" alt="Dashboard Icon" />
+              <img src="./assets/icon/dashboard.png" alt="Dashboard Icon" />
               Data Admin
               <span class="caret"></span>
               <ul class="submenu">
@@ -106,7 +106,7 @@
           </li>
           <li class="menu-dropdown">
             <a href="#" class="menu-admin-active dropdown-toggle">
-              <img src="/assets/icon/dashboard.png" alt="Dashboard Icon" />
+              <img src="./assets/icon/dashboard.png" alt="Dashboard Icon" />
               Laporan
               <span class="caret"></span>
               <ul class="submenu">
@@ -117,7 +117,7 @@
           </li>
           <li class="menu-dropdown">
             <a href="about" class="menu-admin-active dropdown-toggle no-caret">
-              <img src="/assets/icon/dashboard.png" alt="Dashboard Icon" />
+              <img src="./assets/icon/dashboard.png" alt="Dashboard Icon" />
               Tentang Perpustakaan
             </a>
           </li>
